# manylabs

./: CMakeLists.txt  test.cpp
include/: ConsoleUI.h  ICounter.h  ILogger.h
src/: ConsoleUI.cpp  Counter.cpp  Loggers.cpp  main.cpp
